--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,11 +1,13 @@
 project:
   type: website
 
+lang: es
+
 website:
   title: "Patricio Said"
   navbar:
     right:
-      - about.qmd
+      - blog.qmd
       - icon: github
         href: https://github.com/
       - icon: twitter
@@ -16,4 +18,8 @@ format:
     css: styles.css
 
 editor: visual
+
+execute:
+  freeze: true
+
 
