--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,9 +4,12 @@ project:
 lang: es
 
 website:
-  google-analytics: '{{ env.GA_TRACKING_ID }}'
+  google-analytics: 
+    tracking-id: '{{< env GA_TRACKING_ID >}}'
   title: "Patricio Said"
+  description: "blog de Patricio Said (Patosaid), ciencia de datos, R Python programacion, gráficas, plots, dashboard"
   favicon: logo.png
+  margin-footer: "Creado por Pato Said con Quarto, 2024"
   navbar:
     logo: logo.png
     right:
