editando traking GA

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,7 +5,7 @@ lang: es
 
 website:
   google-analytics: 
-    tracking-id: '{{< env GA_TRACKING_ID >}}'
+    tracking-id: '{{ env.GA_TRACKING_ID }}'
   title: "Patricio Said"
   description: "blog de Patricio Said (Patosaid), ciencia de datos, R Python programacion, gráficas, plots, dashboard"
   favicon: logo.png
