--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,7 +7,7 @@ website:
   google-analytics: 
     tracking-id: '{{ env.GA_TRACKING_ID }}'
   title: "Patricio Said"
-  description: "blog de Patricio Said (Patosaid), ciencia de datos, R Python programacion, gráficas, plots, dashboard"
+  description: "blog de Patricio Said (Patosaid patricio said peralta), ciencia de datos, R Python programacion, gráficas, plots, dashboard"
   favicon: logo.png
   navbar:
     logo: logo.png
@@ -22,6 +22,7 @@ format:
     css: styles.css
     include-in-header:
       - includes/umami.html
+      - includes/google.html
 
 editor: visual
 
